updated home - fixed home_contents and home_social 'overlapping' on mobile view

--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,7 @@
     align-items: center;
     height: 100vh;
     padding: 0 10%;
+    position: relative;
 }
 
 .home_content {
@@ -27,7 +28,6 @@
     font-size: 16px;
     margin: 20px 0 40px;
     color: #fff;
-
 }
 
 .home_content .btn_box {
@@ -91,11 +91,24 @@
     box-shadow: 0 0 50px #4717F6;
 }
 
+/* RESPONSIVENESS */
 @media (max-width: 992px) {
-    .home {
-        display: flex;
-        flex-direction: row;
+    #home {
+        flex-direction: column;
+        padding: 0 5%;
         justify-content: center;
+        align-items: flex-start;
     }
-    
+
+    .home_socials {
+        position: relative;
+        bottom: unset;
+        margin-top: 20px;
+    }
+}
+
+@media (max-width: 576px) {
+    #home {
+        padding: 0 2rem;
+    }
 }
